# ecommerce-be/src/main/java/io/labs64/ecommerce/exception/GlobalExceptionHandler.java
@@ -1,36 +1,47 @@
 package io.labs64.ecommerce.exception;
 
-import java.time.OffsetDateTime;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.FieldError;
+import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import io.labs64.ecommerce.v1.model.ErrorResponse;
+import io.labs64.ecommerce.v1.dto.ErrorResponse;
 import jakarta.servlet.http.HttpServletRequest;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(NotFoundException.class)
-    public ResponseEntity<ErrorResponse> handleNotFound(NotFoundException ex, HttpServletRequest request) {
+    public ResponseEntity<ErrorResponse> handleNotFound(final NotFoundException ex, final HttpServletRequest request) {
         String traceId = request.getHeader("X-Request-ID");
-        ErrorResponse error = new ErrorResponse(ex.getErrorCode().name(), ex.getMessage());
-        error.setTraceId(traceId);
-        error.setTimestamp(OffsetDateTime.now());
-
+        ErrorResponse error = new ErrorResponse(ex.getErrorCode().name(), ex.getMessage(), traceId);
         return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
     }
 
-    // Optional: catch-all
-    @ExceptionHandler(Exception.class)
-    public ResponseEntity<ErrorResponse> handleOther(Exception ex, HttpServletRequest request) {
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<ErrorResponse> handleValidationException(final MethodArgumentNotValidException ex,
+            final HttpServletRequest request) {
         String traceId = request.getHeader("X-Request-ID");
-        ErrorResponse error = new ErrorResponse(ErrorCode.INTERNAL_ERROR.name(), "Unexpected error");
-        error.setTraceId(traceId);
-        error.setTimestamp(OffsetDateTime.now());
+        String errorMessage = "Validation failed";
 
+        FieldError firstError = ex.getBindingResult().getFieldErrors().stream().findFirst().orElse(null);
+
+        if (firstError != null) {
+            errorMessage = String.format("Field '%s' is invalid: %s", firstError.getField(),
+                    firstError.getDefaultMessage());
+        }
+
+        ErrorResponse error = new ErrorResponse(ErrorCode.VALIDATION_ERROR.name(), errorMessage, traceId);
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+    }
+
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<ErrorResponse> handleOther(final Exception ex, final HttpServletRequest request) {
+        String traceId = request.getHeader("X-Request-ID");
+        ErrorResponse error = new ErrorResponse(ErrorCode.INTERNAL_ERROR.name(), "Unexpected error", traceId);
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
     }
 }
