# ecommerce-be/src/main/java/io/labs64/ecommerce/v1/entity/Currency.java
@@ -1,0 +1,18 @@
+package io.labs64.ecommerce.v1.entity;
+
+public enum Currency {
+    USD, EUR;
+
+    public static Currency fromString(String currency) {
+        if (currency == null) {
+            return null;
+        }
+        for (Currency c : values()) {
+            if (c.name().equalsIgnoreCase(currency)) {
+                return c;
+            }
+        }
+
+        throw new IllegalArgumentException("Invalid currency value: " + currency);
+    }
+}
